# rust-web-server

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
dev_infra/: create-db.sql  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20240618_153555_create_users.rs  m20240620_112945_create_sessions.rs
scripts/: set_up_infra.sh  tear_down_infra.sh
src/: lib.rs  main.rs
src/app/: bootstrap.rs  mod.rs
src/app/capabilities/: mod.rs
src/app/capabilities/common/: mod.rs
src/app/capabilities/common/config/: config_service.rs  mod.rs
src/app/capabilities/common/global_model/: app_state.rs  mod.rs  session_user.rs
src/app/capabilities/common/inter_service_models/: api_error.rs  app_state.rs  session_user.rs
src/app/capabilities/iam/: constants.rs
src/app/capabilities/iam/controllers/: mod.rs
src/app/capabilities/iam/entities/: mod.rs  sessions.rs  users.rs
src/app/capabilities/iam/enums/: auth_error.rs
src/app/capabilities/iam/helpers/: mod.rs
src/app/capabilities/iam/models/: auth_bearer.rs  mod.rs  user_data.rs
src/app/capabilities/iam/services/: mod.rs
src/app/capabilities/notifications/: mod.rs
src/app/routes/: base.rs
src/app/types/: errors.rs
src/capabilities/: mod.rs
src/capabilities/common/mailer/: mod.rs
src/capabilities/iam/: constants.rs  mod.rs
src/capabilities/iam/entities/: prelude.rs  users.rs
src/capabilities/iam/enums/: mod.rs
src/capabilities/iam/models/: mod.rs
src/capabilities/iam/templates/: magic_link.html
src/server/: app.rs  mod.rs
src/server/routes/: mod.rs  users.rs
(+15 files in other folders)
